[package]
name = "ns-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ns-log = { path = "../ns-log" }
anyhow = "1.0.56"

libm = "0.2.2"
num = "0.4.0"
ndarray = { version = "0.15.4" }
ndarray-stats = "0.5.0"
thiserror = "1.0.30"
log = "0.4.15"
chrono = "0.4.19"